--- a/Last.fm-Scrubbler-WPF/Views/SubViews/SelectScrobblesControl.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/SubViews/SelectScrobblesControl.xaml
@@ -12,9 +12,15 @@
       <ColumnDefinition Width="Auto"/>
       <ColumnDefinition Width="5"/>
       <ColumnDefinition Width="Auto"/>
+      <ColumnDefinition Width="5"/>
+      <ColumnDefinition Width="Auto"/>
+      <ColumnDefinition Width="5"/>
+      <ColumnDefinition Width="Auto"/>
     </Grid.ColumnDefinitions>
 
     <Button x:Name="SelectAll" Grid.Column="0" Content="Select ALL" IsEnabled="{Binding CanSelectAll}"/>
     <Button x:Name="SelectNone" Grid.Column="2" Content="Select NONE" IsEnabled="{Binding CanSelectNone}"/>
+    <TextBlock Grid.Column="4" Text="Num to scrobble:" VerticalAlignment="Center"/>
+    <TextBlock Grid.Column="6" Text="{Binding ToScrobbleCount}" VerticalAlignment="Center"/>
   </Grid>
 </UserControl>
