--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/CSVScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/CSVScrobbleView.xaml
@@ -158,7 +158,7 @@
         </Grid.RowDefinitions>
 
         <Label Grid.Column="0" Grid.Row="0" Content="Finishing time:"/>
-        <subViews:SelectScrobbleTimeControl Grid.Row="0" Grid.Column="2"/>
+        <subViews:SelectScrobbleTimeControl Grid.Row="0" Grid.Column="2" DataContext="{Binding ScrobbleTimeVM}"/>
 
         <Label Grid.Column="0" Grid.Row="2" Content="Default Duration per Song (sec):"/>
         <xctk:IntegerUpDown Grid.Column="2" Grid.Row="2" Minimum="1" Value="{Binding Duration}"/>
