--- a/Last.fm-Scrubbler-WPF/Views/NewVersionView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/NewVersionView.xaml
@@ -3,9 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Scrubbler.Views"
         mc:Ignorable="d"
-        Title="NewVersionView" Height="450" Width="600">
+        Title="New Version Available" Height="450" Width="600">
   <Grid Margin="5,5,5,5">
     <Grid.RowDefinitions>
       <RowDefinition Height="Auto"/>
