MediaPlayerDatabaseScrobbler: Fix not being able to sort with "LastPlayed"

--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/MediaPlayerDatabaseScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/MediaPlayerDatabaseScrobbleView.xaml
@@ -122,7 +122,7 @@
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
-          <GridViewColumn Header="Last Played" local:GridViewSort.PropertyName="Scrobble.LastPlayed">
+          <GridViewColumn Header="Last Played" local:GridViewSort.PropertyName="Scrobble.Played">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
                 <Label VerticalAlignment="Center" Content="{Binding Scrobble.Played}"/>
