--- a/Last.fm-Scrubbler-WPF/Login/UserView.xaml
+++ b/Last.fm-Scrubbler-WPF/Login/UserView.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Scrubbler.Views.UserView"
+﻿<Window x:Class="Scrubbler.Login.UserView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:models="clr-namespace:Scrubbler.Models"
+        xmlns:local="clr-namespace:Scrubbler.Login"
         mc:Ignorable="d"
         Title="Select user" Height="300" Width="300" Icon="..\scrubbler_64.ico">
 
@@ -50,7 +50,7 @@
         <MultiBinding StringFormat="{}{0} ({1} / {2})">
           <Binding Path="Username" TargetNullValue='No active user'/>
           <Binding Path="RecentScrobbleCount" FallbackValue="0"/>
-          <Binding Source="{x:Static models:User.MAXSCROBBLESPERDAY}"/>
+          <Binding Source="{x:Static local:User.MAXSCROBBLESPERDAY}"/>
         </MultiBinding>
       </TextBlock.Text>
     </TextBlock>
