--- a/Last.fm-Scrubbler-WPF/ExtraFunctions/MilestoneCheckerView.xaml
+++ b/Last.fm-Scrubbler-WPF/ExtraFunctions/MilestoneCheckerView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="Scrubbler.Views.ExtraFunctions.MilestoneCheckerView"
+﻿<UserControl x:Class="Scrubbler.ExtraFunctions.MilestoneCheckerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             xmlns:extraViewModels="clr-namespace:Scrubbler.ViewModels.ExtraFunctions"
+             xmlns:local="clr-namespace:Scrubbler.ExtraFunctions"
              xmlns:views="clr-namespace:Scrubbler.Views"
              xmlns:conv="clr-namespace:Scrubbler.Converters"
              xmlns:xceed="http://schemas.xceed.com/wpf/xaml/toolkit"
@@ -15,7 +15,7 @@
                     ObjectType="{x:Type sys:Enum}"
                     x:Key="MilestoneTypeDataProvider">
       <ObjectDataProvider.MethodParameters>
-        <x:Type TypeName="extraViewModels:MilestoneType"/>
+        <x:Type TypeName="local:MilestoneType"/>
       </ObjectDataProvider.MethodParameters>
     </ObjectDataProvider>
 
