--- a/Last.fm-Scrubbler-WPF/ExtraFunctions/PasteYourTasteView.xaml
+++ b/Last.fm-Scrubbler-WPF/ExtraFunctions/PasteYourTasteView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Scrubbler.Views.ExtraFunctions.PasteYourTasteView"
+﻿<UserControl x:Class="Scrubbler.ExtraFunctions.PasteYourTasteView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -88,7 +88,7 @@
             </Style.Triggers>
           </Style>
         </Button.Style>
-        <Image Source="..\..\Resources\copy.png"/>
+        <Image Source="..\Resources\copy.png"/>
         <Button.ToolTip>
           <ToolTip>Copies the text to the clipboard.</ToolTip>
         </Button.ToolTip>
