--- a/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/MediaPlayerScrobbleControl.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/MediaPlayerScrobbleControl.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="700" cal:Bind.Model="{Binding}" Style="{StaticResource EnableControlsStyle}">
@@ -118,39 +117,21 @@
         <Label Grid.Row="0" Grid.Column="0" Content="Track:" FontWeight="Bold"/>
         <TextBlock Grid.Row="0" Grid.Column="2" Margin="0,5,0,0">
           <Hyperlink>
-            <TextBlock Text="{Binding CurrentTrackName, Mode=OneWay}">
-              <i:Interaction.Triggers>
-                <i:EventTrigger EventName="MouseDown">
-                  <cal:ActionMessage MethodName="TrackClicked"/>
-                </i:EventTrigger>
-              </i:Interaction.Triggers>
-            </TextBlock>
+            <TextBlock Text="{Binding CurrentTrackName, Mode=OneWay}" cal:Message.Attach="[Event MouseDown] = [Action TrackClicked]"/>
           </Hyperlink>
         </TextBlock>
 
         <Label Grid.Row="2" Grid.Column="0" Content="Artist:" FontWeight="Bold"/>
         <TextBlock Grid.Row="2" Grid.Column="2" Margin="0,5,0,0">
           <Hyperlink>
-            <TextBlock Text="{Binding CurrentArtistName, Mode=OneWay}">
-              <i:Interaction.Triggers>
-                <i:EventTrigger EventName="MouseDown">
-                  <cal:ActionMessage MethodName="ArtistClicked"/>
-                </i:EventTrigger>
-              </i:Interaction.Triggers>
-            </TextBlock>
+            <TextBlock Text="{Binding CurrentArtistName, Mode=OneWay}" cal:Message.Attach="[Event MouseDown] = [Action ArtistClicked]"/>
           </Hyperlink>
         </TextBlock>
 
         <Label Grid.Row="4" Grid.Column="0" Content="Album:" FontWeight="Bold"/>
         <TextBlock Grid.Row="4" Grid.Column="2" Margin="0,5,0,0">
           <Hyperlink>
-            <TextBlock Text="{Binding CurrentAlbumName, Mode=OneWay}">
-              <i:Interaction.Triggers>
-                <i:EventTrigger EventName="MouseDown">
-                  <cal:ActionMessage MethodName="AlbumClicked"/>
-                </i:EventTrigger>
-              </i:Interaction.Triggers>
-            </TextBlock>
+            <TextBlock Text="{Binding CurrentAlbumName, Mode=OneWay}" cal:Message.Attach="[Event MouseDown] = [Action AlbumClicked]"/>
           </Hyperlink>
         </TextBlock>
 
